NetBSD Problem Report #32728
From ed@compy.fxq.nl Sat Feb 4 11:40:25 2006
Return-Path: <ed@compy.fxq.nl>
Received: from swip.net (mailfe01.swip.net [212.247.154.1])
by narn.netbsd.org (Postfix) with ESMTP id 4656D63B86B
for <gnats-bugs@gnats.netbsd.org>; Sat, 4 Feb 2006 11:40:24 +0000 (UTC)
Message-Id: <200602041140.k14BeFsi028816@compy.fxq.nl>
Date: Sat, 4 Feb 2006 12:40:15 +0100 (CET)
From: ed@fxq.nl
Reply-To: ed@fxq.nl
To: gnats-bugs@netbsd.org
Subject: [gsfb] Cursor 7x15 instead of 8x16
X-Send-Pr-Version: 3.95
>Number: 32728
>Category: port-playstation2
>Synopsis: [gsfb] Cursor 7x15 instead of 8x16
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: port-playstation2-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Feb 04 11:45:00 +0000 2006
>Closed-Date: Sat Feb 04 12:15:36 +0000 2006
>Last-Modified: Sat Feb 04 12:15:36 +0000 2006
>Originator: Ed Schouten
>Release: NetBSD 3.99.15
>Organization:
n/a
>Environment:
System: NetBSD sony.fxq.nl 3.99.15 NetBSD 3.99.15 (SONY) #0: Sat Feb 4 01:14:20 CET 2006 root@compy.fxq.nl:/usr/obj/sys/arch/playstation2/compile/SONY playstation2
Architecture: mipsel
Machine: playstation2
>Description:
The gsfb console driver has the ability to render a block cursor. The
console font is 8x16 big, but the cursor is drawn 7x15.
>How-To-Repeat:
1. Start the screen(1) utility (locally or on a remote box).
2. Press `^A [' (copy)
3. Place the cursor on top of some text
4. You can now see a small border around the cursor (bottom and right)
>Fix:
Below is a small patch for 'gsfb.c' located in 'src/sys/arch/playstation2/ee':
%%%
--- gsfb.c 2005-12-25 00:24:01.000000000 +0100
+++ gsfb.c 2006-02-04 12:32:01.000000000 +0100
@@ -400,8 +400,8 @@
x *= w;
y *= h;
p[20] = ((x << 4) & 0xffff) | ((y << 20) & 0xffff0000);
- p[28] = (((x + w - 1) << 4) & 0xffff) |
- (((y + h - 1) << 20) & 0xffff0000);
+ p[28] = (((x + w) << 4) & 0xffff) |
+ (((y + h) << 20) & 0xffff0000);
}
int
%%%
>Release-Note:
>Audit-Trail:
From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@netbsd.org
Cc:
Subject: PR/32728 CVS commit: src/sys/arch/playstation2/ee
Date: Sat, 4 Feb 2006 12:13:05 +0000 (UTC)
Module Name: src
Committed By: martin
Date: Sat Feb 4 12:13:05 UTC 2006
Modified Files:
src/sys/arch/playstation2/ee: gsfb.c
Log Message:
Fix cursor size. From Ed Schouten in PR port-playstation2/32728.
To generate a diff of this commit:
cvs rdiff -r1.13 -r1.14 src/sys/arch/playstation2/ee/gsfb.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: martin@netbsd.org
State-Changed-When: Sat, 04 Feb 2006 12:15:36 +0000
State-Changed-Why:
Fixed, thanks for the patch
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.