Fix cursor size. From Ed Schouten in PR port-playstation2/32728.